# projectcompressify

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/compressify/: __init__.py  config.py  main.py
src/compressify/modules/: __init__.py  interactive.py  job_manager.py  profile_manager.py  video_compressor.py
src/compressify/utils/: __init__.py  file_utils.py  logger.py  validators.py
